--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "first intership project",
   "main": "index.js",
   "scripts": {
-    "test": "npm start"
+    "test": "npm start",
+    "start": "node index",
+    "dev": "nodemon index"
+    
   },
   "author": "Marks",
   "license": "ISC",
