--- a/Tasks.json
+++ b/Tasks.json
@@ -15,44 +15,23 @@
   },
   "1642014189193": {
     "id": 1642014189193,
+    "title": "fdfdfds ",
+    "description": "",
+    "column": "to-do-list",
+    "color": "#964f4cff"
+  },
+  "1642021451583": {
+    "id": 1642021451583,
     "title": "",
     "description": "",
     "column": "to-do-list",
     "color": "#964f4cff"
   },
-  "1642014392202": {
-    "id": 1642014392202,
+  "1642022111339": {
+    "id": 1642022111339,
     "title": "",
     "description": "",
-    "column": "to-do-list",
-    "color": "#964f4cff"
-  },
-  "1642014397520": {
-    "id": 1642014397520,
-    "title": "",
-    "description": "",
-    "column": "to-do-list",
-    "color": "#964f4cff"
-  },
-  "1642014398273": {
-    "id": 1642014398273,
-    "title": "",
-    "description": "",
-    "column": "to-do-list",
-    "color": "#964f4cff"
-  },
-  "1642014432968": {
-    "id": 1642014432968,
-    "title": "",
-    "description": "",
-    "column": "to-do-list",
-    "color": "#964f4cff"
-  },
-  "1642014433962": {
-    "id": 1642014433962,
-    "title": "",
-    "description": "",
-    "column": "to-do-list",
+    "column": "in-progress-list",
     "color": "#964f4cff"
   }
 }
