--- a/Tasks.json
+++ b/Tasks.json
@@ -8,28 +8,21 @@
   },
   "1642011736570": {
     "id": 1642011736570,
-    "title": "dfdfds",
+    "title": "this is a task",
     "description": "fsfsfds",
     "column": "to-do-list",
     "color": "#964f4cff"
   },
   "1642014189193": {
     "id": 1642014189193,
-    "title": "fdfdfds ",
-    "description": "",
-    "column": "to-do-list",
-    "color": "#964f4cff"
-  },
-  "1642021451583": {
-    "id": 1642021451583,
-    "title": "",
+    "title": "fdfdfds  jjijijijijijiji",
     "description": "",
     "column": "to-do-list",
     "color": "#964f4cff"
   },
   "1642022111339": {
     "id": 1642022111339,
-    "title": "",
+    "title": "adsjdsia ",
     "description": "",
     "column": "in-progress-list",
     "color": "#964f4cff"
