--- a/Tasks.json
+++ b/Tasks.json
@@ -1,30 +1,30 @@
 {
-    "1": {
-      "title": "task 1",
-      "description": "some random task",
-      "id": "3",
-      "column": "done-list",
-      "color": "#964f4cff"
-    },
-    "1642011736570": {
-      "id": 1642011736570,
-      "title": "this is a task",
-      "description": "fsfsfds",
-      "column": "to-do-list",
-      "color": "#964f4cff"
-    },
-    "1642014189193": {
-      "id": 1642014189193,
-      "title": "fdfdfds  jjijijijijijiji",
-      "description": "",
-      "column": "to-do-list",
-      "color": "#964f4cff"
-    },
-    "1642022111339": {
-      "id": 1642022111339,
-      "title": "adsjdsia ",
-      "description": "",
-      "column": "in-progress-list",
-      "color": "#964f4cff"
-    }
+  "1": {
+    "id": "1",
+    "title": "task 1",
+    "description": "some random taskfdsdfsd",
+    "column": "done-list",
+    "color": "#964f4cff"
+  },
+  "1642011736570": {
+    "id": 1642011736570,
+    "title": "this is a task",
+    "description": "fsfsfdsfdsfdsfds",
+    "column": "to-do-list",
+    "color": "#c91313"
+  },
+  "1642014189193": {
+    "id": 1642014189193,
+    "title": "fdfdfds  jjijijijijijiji",
+    "description": "fsdfsdfdsdfdsfds",
+    "column": "to-do-list",
+    "color": "#e01f1f"
+  },
+  "1642022111339": {
+    "id": 1642022111339,
+    "title": "adsjdsia ",
+    "description": "fdsfsdfdsfsdfdsfdsfsfds",
+    "column": "in-progress-list",
+    "color": "#964f4cff"
   }
+}
