--- a/Tasks.json
+++ b/Tasks.json
@@ -12,5 +12,19 @@
     "description": "",
     "column": "in-progress-list",
     "categoryId": "0"
+  },
+  "1642409912910": {
+    "id": 1642409912910,
+    "title": "",
+    "description": "",
+    "column": "done-list",
+    "categoryId": "1"
+  },
+  "1642409945342": {
+    "id": 1642409945342,
+    "title": "cxzdsas ",
+    "description": "ffdadsaddsadsa",
+    "column": "in-progress-list",
+    "categoryId": "1"
   }
 }
