--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "author": "Marks",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^14.1.0",
     "express": "^4.17.2",
+    "mongoose": "^6.1.6",
     "nodemon": "^2.0.15",
     "vanilla-picker": "^2.12.1"
   },
