--- a/package.json
+++ b/package.json
@@ -2,11 +2,12 @@
   "name": "kanban_board",
   "version": "1.0.0",
   "description": "first intership project",
+  
   "main": "index.js",
   "scripts": {
     "test": "npm start",
-    "start": "node ./server/index",
-    "dev": "nodemon ./server/index"
+    "start": "nodemon ./server/dist/index",
+    "dev": "nodemon ./server/src/index.ts"
   },
   "author": "Marks",
   "license": "ISC",
@@ -23,5 +24,11 @@
     "semi": false,
     "singleQuote": true,
     "formatOnSave": true
+  },
+  "devDependencies": {
+    "@types/express": "^4.17.13",
+    "@types/node": "^17.0.10",
+    "ts-node": "^10.4.0",
+    "typescript": "^4.5.4"
   }
 }
