--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "node ./dist/index.js",
     "build:s": "cd server && tsc",
     "build:c": "cd public && tsc && cp index.html dist/index.html",
+    "build:w": "webpack",
     "dev": "nodemon --watch public ./server/dist/index.js "
 
   },
@@ -18,7 +19,7 @@
     "express": "^4.17.2",
     "mongoose": "^6.1.6",
     "nodemon": "^2.0.15",
-    "vanilla-picker": "^2.12.1"
+    "ts-loader": "^9.2.6"
   },
   "prettier": {
     "trailingComma": "es5",
@@ -30,7 +31,12 @@
   "devDependencies": {
     "@types/express": "^4.17.13",
     "@types/node": "^17.0.10",
+    "css-loader": "^6.5.1",
+    "html-webpack-plugin": "^5.5.0",
+    "style-loader": "^3.3.1",
     "ts-node": "^10.4.0",
-    "typescript": "^4.5.4"
+    "typescript": "^4.5.4",
+    "webpack": "^5.67.0",
+    "webpack-cli": "^4.9.2"
   }
 }
