--- a/package.json
+++ b/package.json
@@ -7,10 +7,9 @@
     "test": "npm start",
     "start": "node ./dist/index.js",
     "build:s": "cd server && tsc",
-    "build:c": "cd public && tsc && cp index.html dist/index.html",
+    "build:c": "cd public && tsc && cp index.html ../dist/client/index.html && cp stylesheet.css ../dist/client/stylesheet.css ",
     "build:w": "webpack",
-    "dev": "nodemon --watch public ./server/dist/index.js "
-
+    "dev": "nodemon --watch public ./dist/index.js "
   },
   "author": "Marks",
   "license": "ISC",
@@ -33,6 +32,7 @@
     "@types/node": "^17.0.10",
     "css-loader": "^6.5.1",
     "html-webpack-plugin": "^5.5.0",
+    "jest": "^27.4.7",
     "style-loader": "^3.3.1",
     "ts-node": "^10.4.0",
     "typescript": "^4.5.4",
