--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "first intership project",
   "main": "index.js",
   "scripts": {
-    "test": "npm start",
+    "test": "jest",
     "start": "node ./dist/index.js",
     "build:s": "cd server && tsc",
     "build:c": "cd public && tsc && cp index.html ../dist/client/index.html && cp stylesheet.css ../dist/client/stylesheet.css ",
@@ -29,11 +29,14 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
+    "@types/jest": "^27.4.0",
     "@types/node": "^17.0.10",
     "css-loader": "^6.5.1",
+    "cypress": "^9.3.1",
     "html-webpack-plugin": "^5.5.0",
     "jest": "^27.4.7",
     "style-loader": "^3.3.1",
+    "ts-jest": "^27.1.3",
     "ts-node": "^10.4.0",
     "typescript": "^4.5.4",
     "webpack": "^5.67.0",
