--- a/package.json
+++ b/package.json
@@ -14,10 +14,19 @@
   "author": "Marks",
   "license": "ISC",
   "dependencies": {
+    "@types/express-session": "^1.17.4",
+    "@types/passport": "^1.0.7",
+    "@types/passport-local": "^1.0.34",
+    "@types/passport-local-mongoose": "^6.1.0",
+    "body-parser": "^1.19.1",
     "dotenv": "^14.1.0",
     "express": "^4.17.2",
+    "express-session": "^1.17.2",
     "mongoose": "^6.1.6",
     "nodemon": "^2.0.15",
+    "passport": "^0.5.2",
+    "passport-local": "^1.0.0",
+    "passport-local-mongoose": "^6.1.0",
     "ts-loader": "^9.2.6"
   },
   "prettier": {
@@ -41,5 +50,8 @@
     "typescript": "^4.5.4",
     "webpack": "^5.67.0",
     "webpack-cli": "^4.9.2"
+  },
+  "browser": {
+    "[module-name]": false   
   }
 }
